hphp/hack/test/typecheck/argument_unpacking/unpack_call3.php
<?hh // partial

function f(int $foo, ...$args) {}

function test() {
  $args = 'string';
  f(...$args); // should be error
}
